# FluxPark-Project

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .semgrep.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  FEEDBACK.md  GROWTH.md  README.md  SECURITY.md  USER_MANUAL.md  adk_engine.py  ai_engine.py  app.py  cliff.toml  constants.py  database.py  faq_search.py  helpers.py  i18n.py  main.py  messages.pot  models.py  parking_engine.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  templating.py  webcompat.py
.gitlab/issue_templates/: Bug.md  Documentation.md  Feature Request.md  Setup _ Dev Environment.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
corpus-export/: fluxpark_faq_en.txt  fluxpark_faq_hi.txt  fluxpark_faq_te.txt  upload_metadata.csv
data/: fluxpark_faq_corpus.json  fluxpark_faq_eval.json  fluxpark_faq_finetune_report.json
docs/lighthouse/: README.md  signup-report.report.html  signup-report.report.json
instance/: database.db
routers/: ai.py  auth.py  dashboard.py  members.py  notifications.py  onboarding.py  parking.py  payments.py  security.py  transport.py  visitors.py
scripts/: README.md  browser_smoke_test.js  export_corpus_for_upload.py  finetune_faq_retriever.py
specs/001-my-rooms-multi-property-membership/: plan.md  spec.md  tasks.md
static/: manifest.json  offline.html
static/css/: style.css
static/js/: main.js  service-worker.js
templates/: _bank_details.html  _language_switcher.html  _sidebar_nav.html  _transport_fields.html  _vehicle_table.html  ai_assistant.html  ai_settings.html  base.html  committee_form.html  create_visitor.html  dashboard.html  invite_links.html  login.html  members.html  my_profile.html  my_rooms.html  notifications.html  owner_form.html  parking.html  parking_availability.html  parking_list.html  parking_map.html  parking_slots.html  payments.html  property_created.html  property_form_office.html  property_form_residential.html  property_setup.html  reports.html  role_form_committee.html  role_form_employee.html  role_form_manager.html  role_form_owner.html  role_form_security.html  role_form_tenant.html  role_selection.html  security_form.html  security_scan.html  security_transport.html  security_visitor.html  (+12 more)
tests/: conftest.py  test_ai_assistant.py  test_auth.py  test_faq_search.py  test_property_residential.py
translations/hi/LC_MESSAGES/: messages.mo  messages.po
translations/te/LC_MESSAGES/: messages.mo  messages.po
