[project]
name = "fluxpark"
version = "0.1.0"
description = "Parking management platform for residential and office properties, with role-based dashboards, visitor/transport workflows, an AI assistant, and English/Hindi/Telugu support."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".venv",
    "venv",
    "instance",
    "translations",
    ".specify",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = [
    "E501", # line length is handled by the formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy (type checking)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = false
exclude = ["tests/", "translations/", "\\.specify/"]

# models.py declares `class X(db.Model):` where `db` is a SimpleNamespace
# shim (see database.py) standing in for Flask-SQLAlchemy's `db.Model` —
# mypy can't resolve a dynamic attribute lookup as a class base.
[[tool.mypy.overrides]]
module = "models"
disable_error_code = ["name-defined"]

# Starlette's FormData.get() is typed str | UploadFile | None because
# multipart forms can carry file uploads; none of FluxPark's forms accept
# file uploads, so the UploadFile branch is a structural false positive
# until form reads are routed through a typed helper.
[[tool.mypy.overrides]]
module = "routers.*"
disable_error_code = ["var-annotated", "assignment", "union-attr", "arg-type"]

# ---------------------------------------------------------------------------
# Pylint
# ---------------------------------------------------------------------------
[tool.pylint.main]
ignore = ["translations", ".specify", ".venv", "venv", "instance"]
py-version = "3.11"

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "too-many-lines",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "too-few-public-methods",
    "duplicate-code",
    "line-too-long",
    # FastAPI route handlers must accept `request: Request` to match the
    # login_required decorator's signature, even when the body doesn't use it.
    "unused-argument",
    # Lazy imports inside functions are an intentional pattern here (route
    # handlers, ADK tool closures) to avoid module-level overhead/cycles.
    "import-outside-toplevel",
    # Intentional broad excepts at AI-provider/agent-runtime boundaries,
    # already documented with `# noqa: BLE001` at each call site.
    "broad-exception-caught",
]

# ---------------------------------------------------------------------------
# Bandit (security static analysis)
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "translations", ".specify", "instance"]
# B104: binding to 0.0.0.0 is intentional for the dev server (see app.py / Dockerfile)
skips = ["B104"]

# ---------------------------------------------------------------------------
# Vulture (dead code detection)
# ---------------------------------------------------------------------------
[tool.vulture]
min_confidence = 80
paths = [
    "adk_engine.py",
    "ai_engine.py",
    "constants.py",
    "database.py",
    "helpers.py",
    "i18n.py",
    "main.py",
    "models.py",
    "parking_engine.py",
    "routers",
    "templating.py",
    "webcompat.py",
    "tests",
]
exclude = ["translations/", ".venv/", "venv/", ".specify/"]
ignore_decorators = [
    "@router.api_route",
    "@app.on_event",
]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=. --cov-report=term-missing --cov-fail-under=30"

# ---------------------------------------------------------------------------
# Coverage.py
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "venv/*",
    "translations/*",
    ".specify/*",
]

[tool.coverage.report]
fail_under = 30
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
